@@ -1,5 +1,6 @@
 Release CMTK-1.3.0:
 
+- Bugfix: "convertx --mask-inverse" was broken.
 - Added: "mk_phantom_3d" tool can now import either an image including
     existing pixel data or just the grid geometry.
 - Added: "mk_phantom_3d" tool now supports three different coordinate modes:
